migrating missing articles , edit slugs , screenshots

--- a/advanced-setup-guides/manually-resize-disk-after-plan-upgrade-on-live-linux-systems.mdx
+++ b/advanced-setup-guides/manually-resize-disk-after-plan-upgrade-on-live-linux-systems.mdx
@@ -17,11 +17,11 @@ To resize disk space and unallocated space on your disk, use SystemRescueCD. The
 Remember, modifying disk partitions and file systems can be risky and may result in data loss, especially if there's a power interruption or if the operations are performed incorrectly. Always back up important data before proceeding.
 Here’s a general guide on how to resize disk space manually:
 
-## Access the EDBB VPS Portal
+## Access the EDBB VPS Control Panel
 
 After the Upgrade was confirmed ...
 
-* Log in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>
+* Log in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>
 
 * Locate your VPS from the Services tab
 
