--- a/advanced-setup-guides/script-based-mikrotik-router-os-installation-guide-winbox.mdx
+++ b/advanced-setup-guides/script-based-mikrotik-router-os-installation-guide-winbox.mdx
@@ -14,7 +14,7 @@ Winbox is then used to complete the initial configuration.
 
 ## 1. Prepare the VPS
 
-1. Reinstall the VPS with a clean Ubuntu 22.04 environment using the [EDBB VPS Portal](https://my.edbb.com).  
+1. Reinstall the VPS with a clean Ubuntu 22.04 environment using the [EDBB Control Panel](https://my.edbb.com).  
 2. Boot the VPS and connect via SSH.
 
 > The script automatically pulls your existing IPv4 and gateway from Ubuntu before overwriting the disk. Make sure the VPS has internet connectivity during the process.
