--- a/backups.mdx
+++ b/backups.mdx
@@ -9,7 +9,7 @@ description: "You are responsible for creating backups! Ensure you manage your m
 EDBB does not provide any backup services for VPS. \
 It is important that you manage your own backups to protect your data.
 
-## **What this means for you:**
+## **What this means for you**
 
 🛡 **You are responsible** for creating backups of your server and all important data. \
 🛡 We recommend scheduling regular backups to ensure your data is safe.
@@ -34,7 +34,7 @@ It is important that you manage your own backups to protect your data.
 
 ---
 
-## Build a Simple and Reliable Backup Plan 💾
+## Build a Simple and Reliable Backup Plan 
 
 Having regular backups makes sure you can recover your VPS fast — even after system crashes, mistakes, or attacks.
 
