--- a/check-your-inbox.mdx
+++ b/check-your-inbox.mdx
@@ -10,11 +10,11 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 Thank you for choosing EDBB! We're excited to have you on board, and we'll make sure your experience is smooth and personalized.
 
-### What's Next?
+### What's Next
 
 After ordering and receiving a payment confirmation, please keep an eye on your mailbox for a **Welcome Email** from [**support@edbb.com**](mailto:support@edbb.com). This email contains everything you need to get started with your Virtual Private Server (VPS).
 
-### What's in the Email?
+### What's in the Email
 
 - VPS Primary **IPv4 address**
 - **Username** and **Password** for the OS
@@ -23,6 +23,6 @@ After ordering and receiving a payment confirmation, please keep an eye on your 
 - Links to to this [Knowledge Base](https://docs.edbb.com) and to our [Acceptable Use Policy, AUP](https://docs.edbb.com/acceptable-use-policy).
 - Link to our public [Statuspage](https://status.edbb.com).
 
-### Didn't Receive the Email?
+### Didn't Receive the Email
 
 Check your spam folder and whitelist `support@edbb.com`. If nothing arrives within a few minutes, [follow this guide](https://docs.edbb.com/no-email-received) for the next steps.
