--- a/faq/billing-lifecycle/cancel-a-service.mdx
+++ b/faq/billing-lifecycle/cancel-a-service.mdx
@@ -23,7 +23,7 @@ Cacel your EDBB VPS directly in the control panel. Select **Request Cancellation
 <Steps>
   <Step title="Sign in to the control panel">
     Open the <a href="https://my.edbb.com/clientarea.php" target="_blank">
-     EDBB VPS Portal</a>
+     EDBB Control Panel</a>
 
     and go to <strong>Services → My Products</strong>
      .
