--- a/faq/billing-lifecycle/cancellation-and-refund-policy.mdx
+++ b/faq/billing-lifecycle/cancellation-and-refund-policy.mdx
@@ -7,7 +7,7 @@ description: "Cancel your EDBB VPS at any time; refunds are available within 24 
 ## Step 1 — Cancel the Service
 
 <Info>
-  You can cancel a VPS anytime from the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB VPS Portal</a>. If you plan to request a refund, choose <strong>Cancel Immediately</strong> so the service stops within minutes.
+  You can cancel a VPS anytime from the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB Control Panel</a>. If you plan to request a refund, choose <strong>Cancel Immediately</strong> so the service stops within minutes.
 </Info>
 
 Need a refresher? Follow the dedicated [Cancel a VPS guide](./cancel-a-service).
