--- a/faq/billing-lifecycle/find-and-download-invoices.mdx
+++ b/faq/billing-lifecycle/find-and-download-invoices.mdx
@@ -8,7 +8,7 @@ description: "Access all EDBB invoices from the client portal and download PDFs 
 
 <Steps>
   <Step title="Open the invoice list">
-    Log in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB VPS Portal</a> and navigate to <strong>Billing → My Invoices</strong>.
+    Log in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB Control Panel</a> and navigate to <strong>Billing → My Invoices</strong>.
   </Step>
   <Step title="Find the document">
     Use search or filters (status, date range, amount) to locate the invoice you need.
