--- a/faq/billing-lifecycle/how-to-add-account-credit.mdx
+++ b/faq/billing-lifecycle/how-to-add-account-credit.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Add Account Credit"
 description: Learn how to add funds to your account, apply credit to invoices, and avoid underpayment issues. Step-by-step guide for account top-ups.
 ---
 
-## Why Add Credit?
+## Why Add Credit
 
 <Info>
   Account credit is optional. It’s useful if you want renewals to auto-charge from a balance, prefer to pre-fund several invoices, or need coverage while traveling.
@@ -14,7 +14,7 @@ description: Learn how to add funds to your account, apply credit to invoices, a
 
 <Steps>
   <Step title="Open the Add Funds page">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php?action=addfunds" target="_blank" rel="noreferrer">EDBB VPS Portal</a> and navigate to <strong>Billing → Add Funds</strong>.
+    Sign in to the <a href="https://my.edbb.com/clientarea.php?action=addfunds" target="_blank" rel="noreferrer">EDBB Control Panel</a> and navigate to <strong>Billing → Add Funds</strong>.
   </Step>
   <Step title="Choose the amount and method">
     Enter the amount to deposit and pick your preferred payment method (card, crypto, or supported wallet).
