--- a/faq/billing-lifecycle/how-to-receive-monthly-consolidated-invoice.mdx
+++ b/faq/billing-lifecycle/how-to-receive-monthly-consolidated-invoice.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Consolidated Invoice"
 description: "EDBB can align all active services to a single billing date so you receive one monthly invoice." 
 ---
 
-## Why Consolidate?
+## Why Consolidate
 
 <Info>
   Aligning renewals onto one date simplifies budgeting and accounting—especially if you manage multiple VPSs or projects.
