--- a/faq/ip-addresses/announcing-third-party-ip-prefixes.mdx
+++ b/faq/ip-addresses/announcing-third-party-ip-prefixes.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Third-Party Prefixes"
 description: "EDBB announces customer-owned prefixes only on dedicated servers. VPS plans use provider IP space."
 ---
 
-## Can VPS Plans Announce Customer Prefixes?
+## Can VPS Plans Announce Customer Prefixes
 
 <Info>
   VPS offerings use EDBB-owned IP space. Customer-owned prefixes require BGP capabilities that aren’t exposed on shared virtualization platforms.
