--- a/faq/ip-addresses/change-ip-address.mdx
+++ b/faq/ip-addresses/change-ip-address.mdx
@@ -7,7 +7,7 @@ description: "Swap the primary IPv4 on your EDBB VPS for free within 24 hours, o
 import { CtaButton } from "/snippets/cta-button.mdx";
 
 <Info>
-  You can refresh the primary IPv4 once per VPS for free within the first 24 hours. After that window, order a standard or bespoke change directly inside the EDBB VPS Portal.
+  You can refresh the primary IPv4 once per VPS for free within the first 24 hours. After that window, order a standard or bespoke change directly inside the EDBB Control Panel.
 </Info>
 
 ## Free Change Within 24 Hours
@@ -15,10 +15,10 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 Every new VPS includes a one-time IP change at no cost during the first 24 hours.
 
 <Steps>
-  <Step title="Open the EDBB VPS Portal">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB VPS Portal</a> and pick the VPS from <strong>Services → My Products</strong>.
+  <Step title="Open the EDBB Control Panel">
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB Control Panel</a> and pick the VPS from <strong>Services → My Products</strong>.
   </Step>
-  <Step title="Stay on the Dashboard tab">
+  <Step title="Stay on the Control Panel tab">
     The summary card on the right lists <strong>Primary IPv4</strong> with copy and refresh icons. This is where the free swap is triggered.
   </Step>
   <Step title="Request the change">
