--- a/faq/ip-addresses/do-ip-addresses-change-during-upgrade-or-reinstall.mdx
+++ b/faq/ip-addresses/do-ip-addresses-change-during-upgrade-or-reinstall.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "IP Persistence"
 description: "Your assigned IPv4/IPv6 stays the same when you reinstall the OS or change plans on EDBB VPS instances."
 ---
 
-## What Happens to Your IPs?
+## What Happens to Your IPs
 
 <Info>
   Reinstalling the operating system or changing your VPS plan does <strong>not</strong> rotate the assigned IPv4 or IPv6. The addresses stay linked to the service for as long as it remains active.
