--- a/faq/ip-addresses/order-bespoke-ip-address.mdx
+++ b/faq/ip-addresses/order-bespoke-ip-address.mdx
@@ -25,7 +25,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 <Steps>
   <Step title="Contact EDBB Support">
-    From the EDBB VPS Portal, reach out via the messenger or by email. Include your VPS identifier (primary IPv4 or KVM ID) and how many bespoke addresses you need.
+    From the EDBB Control Panel, reach out via the messenger or by email. Include your VPS identifier (primary IPv4 or KVM ID) and how many bespoke addresses you need.
   </Step>
 </Steps>
 
