--- a/faq/ip-addresses/ping-test-ip.mdx
+++ b/faq/ip-addresses/ping-test-ip.mdx
@@ -14,7 +14,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 ---
 
-## Latency & Route Testing Toolkit
+## Latency - Route Testing Toolkit
 
 <CardGroup cols={2}>
   <Card title="🌍 Latency App">
