--- a/faq/server-locations/change-server-location.mdx
+++ b/faq/server-locations/change-server-location.mdx
@@ -18,7 +18,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 <Steps>
   <Step title="Deploy in the new location">
-    Order a VPS in the target facility from the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB VPS Portal</a>. Match the plan size so migrations stay simple.
+    Order a VPS in the target facility from the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB Control Panel</a>. Match the plan size so migrations stay simple.
   </Step>
   <Step title="Migrate data and services">
     Use snapshots, rsync, database dumps, or configuration management to move workloads from the original instance.
