--- a/faq/traffic-bandwidth/exceeding-monthly-included-traffic.mdx
+++ b/faq/traffic-bandwidth/exceeding-monthly-included-traffic.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Over Limit"
 description: "When your VPS hits 100% of its traffic allocation, throughput is throttled; learn how to restore full speed." 
 ---
 
-## What Happens When You Hit the Limit?
+## What Happens When You Hit the Limit
 
 <Info>
   Once your monthly traffic allowance (plus a 5% grace buffer) is exhausted, EDBB throttles the VPS NIC to roughly **64 kbit/s**. The VM stays online, but production workloads will feel sluggish until you add traffic or reach the next reset.
