--- a/faq/traffic-bandwidth/traffic-stats-refill-explained.mdx
+++ b/faq/traffic-bandwidth/traffic-stats-refill-explained.mdx
@@ -8,7 +8,7 @@ description: "Review how EDBB meters VPS traffic, when traffic refills happen, a
 
 <Info>
   In the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">
-  EDBB VPS Portal</a>
+  EDBB Control Panel</a>
 
   , open your VPS and switch to the <strong>Traffic</strong>
    tab. It shows the current cycle, auto-hydration settings, pool balance, and usage charts at a glance.
@@ -30,7 +30,7 @@ Email alerts land at 80%, 90%, and 100%, but the portal indicator is the quickes
 
 ---
 
-## Inspect Daily & Cumulative Graphs
+## Inspect Daily - Cumulative Graphs
 
 - Hover over the bars to see each day’s combined ingress + egress in GB.
 - Use the cumulative chart to verify long-running jobs or unexpected spikes.
@@ -60,7 +60,7 @@ Totals reset automatically at the start of the next billing cycle.
 
 ---
 
-## Manage Traffic Pool & Hydration
+## Manage Traffic Pool - Hydration
 
 ![Manual and auto hydration tabs](/assets/traffic-pool-edbb-manual-auto-hydration.png)
 
@@ -77,7 +77,7 @@ All assignments are logged under **Hydration log** and **Pool log**.
 
 ---
 
-## What Happens at 100% Usage?
+## What Happens at 100% Usage
 
 <Steps>
   <Step title="Grace & throttle">
