--- a/faq/traffic-bandwidth/traffic-vs-bandwidth.mdx
+++ b/faq/traffic-bandwidth/traffic-vs-bandwidth.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Traffic vs Bandwidth"
 description: "Traffic measures total data transferred over time; bandwidth is the maximum throughput available at any moment." 
 ---
 
-## Same Pipe, Different Metrics
+## Same Pipe - Different Metrics
 
 <Info>
   Bandwidth is the **speed limit** of your port; traffic is the **amount of data** you actually move during a billing cycle.
