--- a/faq/upgrades-downgrades/cpu-cores-vs-cpu-sockets-in-vps-environments/understanding-cpu-cores-vs-sockets-in-vps.mdx
+++ b/faq/upgrades-downgrades/cpu-cores-vs-cpu-sockets-in-vps-environments/understanding-cpu-cores-vs-sockets-in-vps.mdx
@@ -26,11 +26,11 @@ description: "Understand how vCPUs are mapped to sockets and cores, why it matte
 
 ---
 
-## Change the CPU Topology in the Portal
+## Change the CPU Topology in the control panel
 
 <Steps>
   <Step title="Open CPU settings">
-    In the EDBB VPS Portal, open your VPS and switch to the <strong>Settings</strong> tab. Locate the <strong>CPU Cores vs Sockets</strong> control.
+    In the EDBB control panel, open your VPS and switch to the <strong>Settings</strong> tab. Locate the <strong>CPU Cores vs Sockets</strong> control.
   </Step>
   <Step title="Pick the layout">
     Choose whether you want <strong>multiple sockets</strong> or <strong>multiple cores</strong>. The portal automatically maps your vCPU allotment to the selected layout.
