--- a/faq/upgrades-downgrades/upgrade-disk-drive-boost.mdx
+++ b/faq/upgrades-downgrades/upgrade-disk-drive-boost.mdx
@@ -29,7 +29,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 <Steps>
   <Step title="Open the service">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB VPS Portal</a>, head to <strong>Services</strong>, and select the VPS that needs extra space.
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB Control Panel</a>, head to <strong>Services</strong>, and select the VPS that needs extra space.
   </Step>
   <Step title="Go to Upgrade → Upgrade Components">
     Use the <strong>Upgrade</strong> tab and click the blue <strong>Upgrade Components</strong> button. The comparison screen lists every add-on available for that VPS, including Drive Boost storage.
