--- a/faq/upgrades-downgrades/upgrade-plan.mdx
+++ b/faq/upgrades-downgrades/upgrade-plan.mdx
@@ -12,7 +12,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
   Plan upgrades swap your current VPS for a larger predefined tier—more vCPU, RAM, disk, and monthly traffic—without reinstalling or changing the IP address.
 </Info>
 
-## Why Upgrade?
+## Why Upgrade
 
 - Add CPU, memory, and disk space in one step.  
 - Boost the monthly traffic allowance tied to the plan.  
@@ -26,13 +26,13 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 ## Option 1 — Use the Quick Upgrade Card
 
-If you already know which tier you need, click the upgrade shortcut on the service dashboard.
+If you already know which tier you need, click the upgrade shortcut on the service Control Panel.
 
-![Quick upgrade button on the dashboard](/assets/Upgrade-right.png)
+![Quick upgrade button on the dashboard](/assets/Upgrade-plan-card.png)
 
 <Steps>
   <Step title="Open the VPS dashboard">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a> and choose the service you want to scale.
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a> and choose the service you want to scale.
   </Step>
   <Step title="Press Upgrade">
     Hit the green <strong>Upgrade</strong> button in the right-hand column. You’ll land on the plan comparison page that lists every tier above your current one.
@@ -81,7 +81,7 @@ Need granular resource changes instead? Use Upgrade Components.
 
 ---
 
-## Need Even More Traffic?
+## Need Even More Traffic
 
 Top up your traffic pool to share data transfer across services. Auto-hydration can refill VPS traffic automatically when it nears 99% usage.
 
