--- a/faq/upgrades-downgrades/upgrade-resources.mdx
+++ b/faq/upgrades-downgrades/upgrade-resources.mdx
@@ -26,11 +26,11 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 ---
 
-## Order a Component Upgrade via the Portal
+## Order a Component Upgrade via the Control Panel
 
 <Steps>
   <Step title="Open the VPS dashboard">
-    Sign in at the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>, go to <strong>Services</strong>, and choose the VPS you want to extend.
+    Sign in at the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>, go to <strong>Services</strong>, and choose the VPS you want to extend.
   </Step>
   <Step title="Go to Upgrade → Upgrade Components">
     Click the <strong>Upgrade</strong> tab, then press the blue <strong>Upgrade Components</strong> button. The comparison page lists each resource you can increase.
@@ -63,7 +63,7 @@ Need a full plan change instead? See the higher-tier upgrade guide.
 
 ---
 
-## Need More Traffic?
+## Need More Traffic
 
 Consider the traffic pool to top up bandwidth for any VPS in your account. Auto hydration can refill traffic automatically near 99% usage.
 
