--- a/misc/security-compliance.mdx
+++ b/misc/security-compliance.mdx
@@ -22,7 +22,7 @@ updatedAt: "Mon Apr 28 2025 02:00:00 GMT+0200 (Central European Summer Time)"
 
 ---
 
-## Compliance & Framework Mapping
+## Compliance - Framework Mapping
 
 <CardGroup cols={2}>
   <Card title="Formal Certifications">
@@ -68,7 +68,7 @@ updatedAt: "Mon Apr 28 2025 02:00:00 GMT+0200 (Central European Summer Time)"
 
 ---
 
-## Trust & Transparency
+## Trust - Transparency
 
 - **Network footprint**: EDBB operates AS57169 with allocations at RIPE NCC and [ARIN](https://search.arin.net/rdap/?query=EGL-51).  
 - **Service history**: Uptime reports, maintenance notes, and postmortems live at [status.edbb.com](https://status.edbb.com).  
@@ -77,7 +77,7 @@ updatedAt: "Mon Apr 28 2025 02:00:00 GMT+0200 (Central European Summer Time)"
 
 ---
 
-## Data Center Partners & Example Site
+## Data Center Partners - Example Site
 
 EDBB capacity spans multiple European and international metros. Facility-level controls include biometric access, CCTV, dual power feeds, and on-site security.
 
@@ -95,7 +95,7 @@ Customers can cross-reference other metro sites directly with the provider:
 
 ---
 
-## Questionnaires & Documentation Access
+## Questionnaires - Documentation Access
 
 We keep this page current so most due diligence can be completed without a custom NDA. If your procurement flow requires tailored responses, send the form to **compliance@edbb.com** and include:  
 - Target customer name and region  
@@ -104,7 +104,7 @@ We keep this page current so most due diligence can be completed without a custo
 
 ---
 
-## Code of Ethics & Responsible Operations
+## Code of Ethics - Responsible Operations
 
 - **Sustainability** – Preference for carbon-neutral data centers, energy-efficient hardware, and responsible e-waste disposal.  
 - **Customer-first decisions** – Conflicts of interest are escalated and documented; we avoid lock-in tactics.  
