--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -29,7 +29,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
     <div style={{ marginTop:"16px" }}>
     <Frame>
-      ![Install OS in Control Panel](/assets/vps-reinstall-os.png)
+      ![Install OS in Control Panel](/assets/reinstall.png)
     </Frame>
     </div>
   </Step>
@@ -38,7 +38,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
     <div style={{ marginTop:"16px" }}>
     <img
-      src="/assets/vps-reinstall-os-sel.png"
+      src="/assets/reinstall-OS.png"
       alt="Selecting an AutoInstall template"
       style={{ width:"100%",maxWidth:"820px",borderRadius:"16px",border:"1px solid rgba(0,0,0,0.08)" }}
     />
@@ -62,7 +62,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 ---
 
-## Track Progress, then Connect
+## Track Progress - then Connect
 
 | OS          | Approx. time | What happens / What to do                                                                                                                                                                                                                                   |
 | ----------- | ------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
