--- a/vps-management/bring-your-own-iso.mdx
+++ b/vps-management/bring-your-own-iso.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Upload a Custom ISO Image"
 sidebarTitle: "Upload Custom ISO"
-description: "EDBB lets you mount your own ISO images—install custom OS builds, appliances, or bare-metal backups directly from the portal."
+description: "EDBB lets you mount your own ISO images—install custom OS builds, appliances, or bare-metal backups directly from the Control Panel."
 ---
 
 ## Bring Your Own ISO
@@ -33,11 +33,11 @@ description: "EDBB lets you mount your own ISO images—install custom OS builds
 
 ---
 
-## Upload the ISO to the Portal
+## Upload the ISO to the Control Panel
 
 <Steps>
   <Step title="Open Installation → Custom Image">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB VPS Portal</a>, open your VPS, and switch to <strong>Installation</strong>. Choose the <strong>Custom Image</strong> tab.
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB Control Panel</a>, open your VPS, and switch to <strong>Installation</strong>. Choose the <strong>Custom Image</strong> tab.
   </Step>
   <Step title="Paste the ISO URL">
     Select <strong>Download ISO</strong>, paste the direct link (for example, <code>https://cdn.example.com/os/custom.iso</code>), and confirm.
@@ -74,7 +74,7 @@ Need a refresher on console controls or unmounting? Review the <a href="./mount-
 
 ---
 
-## Retention & Cleanup
+## Retention - Cleanup
 
 - Custom ISOs stay available for **24 hours**. Re-upload them if you need another session later.  
 - For sensitive media, remove the ISO manually once you finish the installation.  
