--- a/vps-management/how-to-change-ip-address-in-windows-server.mdx
+++ b/vps-management/how-to-change-ip-address-in-windows-server.mdx
@@ -16,7 +16,7 @@ description: "Collect the new IPv4 details from the Network tab, change them in 
 
 <Steps>
   <Step title="Open the Network tab">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a> and open the <strong>Network</strong> tab on your VPS. Record the IPv4 details exactly as shown.
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a> and open the <strong>Network</strong> tab on your VPS. Record the IPv4 details exactly as shown.
   </Step>
   <Step title="Decide on additional IPs">
     If multiple addresses are assigned, choose which will be primary (outbound) and which will be secondary.
