--- a/vps-management/ip-address-information.mdx
+++ b/vps-management/ip-address-information.mdx
@@ -15,8 +15,8 @@ description: "Find IPv4, IPv6, gateway, and DNS details for your VPS on the Netw
 ## Step 1 – Open the Network Tab
 
 <Steps>
-  <Step title="Log in to the portal">
-    Visit the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>, go to <strong>Services</strong>, and select your VPS.
+  <Step title="Log in to the Control Panel">
+    Visit the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>, go to <strong>Services</strong>, and select your VPS.
   </Step>
   <Step title="Switch to Network">
     Click the <strong>Network</strong> tab in the service navigation. The page lists IPv4, IPv6, and DNS information.
