--- a/vps-management/ipv6-configuration.mdx
+++ b/vps-management/ipv6-configuration.mdx
@@ -12,11 +12,11 @@ description: "Find your IPv6 range and gateway in the Network tab, then add addr
 
 ---
 
-## Step 1 – Grab the Details from the Portal
+## Step 1 – Grab the Details from the Control Panel
 
 <Steps>
   <Step title="Open the Network tab">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>, select your VPS, and open the <strong>Network</strong> tab. Copy the IPv6 assignment and gateway.
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>, select your VPS, and open the <strong>Network</strong> tab. Copy the IPv6 assignment and gateway.
   </Step>
   <Step title="Note the DNS entries">
     The Network tab also lists recommended IPv4/IPv6 resolvers—use them if you want dual-stack name resolution.
