--- a/vps-management/manually-change-the-ip-address-in-ubuntu-versions-1804-to-2404.mdx
+++ b/vps-management/manually-change-the-ip-address-in-ubuntu-versions-1804-to-2404.mdx
@@ -16,7 +16,7 @@ description: "Use Netplan to change IPv4 addresses, gateways, or DNS entries on 
 
 <Steps>
   <Step title="Open the Network tab">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>, open your VPS, and switch to <strong>Network</strong>. Note the IPv4 address, subnet, gateway, and DNS servers.
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>, open your VPS, and switch to <strong>Network</strong>. Note the IPv4 address, subnet, gateway, and DNS servers.
   </Step>
   <Step title="Plan primary vs secondary IPs">
     Decide which addresses should be primary (first in the list) and which should be secondary.
