--- a/vps-management/mount-iso-image.mdx
+++ b/vps-management/mount-iso-image.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Mount ISO"
 description: "Load recovery tools or custom installers by mounting an ISO directly from the EDBB portal."
 ---
 
-## Mount ISO Images from the Portal
+## Mount ISO Images from the Control Panel
 
 <Info>
   Mounting an ISO temporarily changes the boot order. Be ready for the VPS to reboot and save any work before you proceed.
@@ -16,7 +16,7 @@ description: "Load recovery tools or custom installers by mounting an ISO direct
 
 <CardGroup cols={3}>
   <Card title="🔐 Portal Access">
-    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a> and open the service dashboard.
+    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a> and open the service dashboard.
   </Card>
   <Card title="🕒 Maintenance Window">
     Plan a short outage—the VPS restarts when the ISO is attached.
@@ -32,7 +32,7 @@ description: "Load recovery tools or custom installers by mounting an ISO direct
 
 <Steps>
   <Step title="Open the Installation tab">
-    From your VPS dashboard, switch to <strong>Installation</strong>, then the <strong>ISO Boot</strong> sub-tab.
+    From your VPS Control Panel, switch to <strong>Installation</strong>, then the <strong>ISO Boot</strong> sub-tab.
   </Step>
   <Step title="Pick an ISO">
     Choose from the built-in helper images (Linux rescue tools, Windows password helper, etc.).
