--- a/vps-management/reset-root-password-linux.mdx
+++ b/vps-management/reset-root-password-linux.mdx
@@ -17,7 +17,7 @@ description: "Use the EDBB password-helper ISO to reset your Linux root password
 <CardGroup cols={3}>
   <Card title="🔐 Portal Access Ready">
     Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">
-    EDBB VPS Portal</a>
+    EDBB Control Panel</a>
 
     . All steps happen from the service dashboard.
   </Card>
@@ -35,7 +35,7 @@ description: "Use the EDBB password-helper ISO to reset your Linux root password
 
 <Steps>
   <Step title="Log in">
-    Sign in to the EDBB control panel, go to <strong>Services</strong>
+    Sign in to the EDBB Control Panel, go to <strong>Services</strong>
     , and select the VPS that needs a fresh root password.
   </Step>
   <Step title="Check power state">
