--- a/vps-management/reset-windows-admin-password.mdx
+++ b/vps-management/reset-windows-admin-password.mdx
@@ -16,7 +16,7 @@ description: "Boot the Windows password-helper ISO, clear the Administrator pass
 
 <CardGroup cols={3}>
   <Card title="🔐 Portal Access">
-    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>. You’ll manage the entire workflow from the service dashboard.
+    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>. You’ll manage the entire workflow from the service dashboard.
   </Card>
   <Card title="🕒 Restart Window">
     Allow a short maintenance window—the VPS reboots once into the helper ISO and once back into Windows.
@@ -28,11 +28,11 @@ description: "Boot the Windows password-helper ISO, clear the Administrator pass
 
 ---
 
-## Step 1 – Open the VPS Dashboard
+## Step 1 – Open the VPS Control Panel
 
 <Steps>
   <Step title="Log in">
-    Sign in to the EDBB portal, go to <strong>Services</strong>, and open the Windows VPS that needs recovery.
+    Sign in to the EDBB Control Panel, go to <strong>Services</strong>, and open the Windows VPS that needs recovery.
   </Step>
   <Step title="Check the status">
     Ensure the VPS is running. The helper workflow uses an automated reboot—no manual shutdown required.
