--- a/vps-management/your-support-pin.mdx
+++ b/vps-management/your-support-pin.mdx
@@ -18,7 +18,7 @@ description: "Locate the Support PIN in the control panel and understand when yo
 
 <Steps>
   <Step title="Open your VPS summary">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB VPS Portal</a> and open the VPS from <strong>Services</strong>.
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB Control Panel</a> and open the VPS from <strong>Services</strong>.
   </Step>
   <Step title="Check the right-side overview">
     The <strong>Summary</strong> card on the right lists the Support PIN alongside the KVM ID, plan, and installed OS. Tap the copy icon to grab it instantly.
