--- a/windows-remote-desktop.mdx
+++ b/windows-remote-desktop.mdx
@@ -16,7 +16,7 @@ Need to deploy Windows first? Reinstall from the EDBB portal with the <a href="/
 
 ---
 
-## Why Use RDP?
+## Why Use RDP
 
 <CardGroup cols={3}>
   <Card title="🖥️ Full Desktop">
