--- a/faq/ip-addresses/order-additional-ip-address.mdx
+++ b/faq/ip-addresses/order-additional-ip-address.mdx
@@ -27,7 +27,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 <Steps>
   <Step title="Start the conversation">
-    Sign in to the EDBB VPS Portal and contact Support via the messenger or by email—let them know you’d like more IPv4 addresses.
+    Sign in to the EDBB Control Panel and contact Support via the messenger or by email—let them know you’d like more IPv4 addresses.
   </Step>
   <Step title="Share the service details">
     Provide the primary IPv4 (or KVM service ID) and state how many extra addresses you need—up to ten per VPS.
