--- a/vps-management/basic-ipv6-troubleshooting.mdx
+++ b/vps-management/basic-ipv6-troubleshooting.mdx
@@ -16,7 +16,7 @@ description: "Run through portal and OS-level checks to resolve IPv6 reachabilit
 
 <Steps>
   <Step title="Check the Network tab">
-    Open the <strong>Network</strong> tab in the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>. Note the IPv6 assignment, gateway, and recommended DNS resolvers.
+    Open the <strong>Network</strong> tab in the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>. Note the IPv6 assignment, gateway, and recommended DNS resolvers.
   </Step>
   <Step title="Inspect the running config">
     On the VPS, run:
@@ -26,7 +26,7 @@ ip -6 addr show
 ip -6 route show
 ```
 
-    Ensure the assigned address matches your /64 range and that the default route points to the gateway from the portal.
+    Ensure the assigned address matches your /64 range and that the default route points to the gateway from the Control Panel.
   </Step>
 </Steps>
 
