--- a/vps-management/system-configuration-dialog.mdx
+++ b/vps-management/system-configuration-dialog.mdx
@@ -16,10 +16,11 @@ description: "Tune CPU, boot, storage, network, and display settings for your ED
 
 <Steps>
   <Step title="Open the service dashboard">
-    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>, open <strong>Services</strong>, and select the VPS you want to adjust.
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB Control Panel</a>, open <strong>Services</strong>, and select the VPS you want to adjust.
   </Step>
   <Step title="Launch System Configuration">
-    In the Settings tab, click <strong>System Configuration</strong>. The dialog opens with tabs for each hardware category.
+    Click on the Settings tab. The dialog opens with tabs for each hardware category.
+    ![settings](/assets/settings.png)
   </Step>
 </Steps>
 
@@ -74,4 +75,4 @@ description: "Tune CPU, boot, storage, network, and display settings for your ED
   Switching disk or network drivers can make the guest OS unbootable if drivers aren’t installed. Confirm driver support before applying changes.
 </Callout>
 
-You’re ready to tailor the virtual hardware for your workload while staying within the EDBB portal.
+You’re ready to tailor the virtual hardware for your workload while staying within the EDBB Control Panel.
